Change Floorplan, updated icons and add new lights/devices to the floor plan. Also resize the floorplan to fit better for kindle pw3

--- a/automations.html
+++ b/automations.html
@@ -20,14 +20,16 @@
         <!-- HEADER START -->
         <div id="header">
             <div id="logo">
-                <span style="font-size: 30px">KFloorP</span><br />
-                <span style="font-size: 23px">HASS</span><br />
-                <span style="font-size: 30px" id="clock"></span><br />
+                <span style="font-size: 40px"></span><br />
+                <span style="font-size: 40px">FloorPlan</span><br />
+                <span style="font-size: 40px"></span><br />
+                <span style="font-size: 40px" id="clock"></span><br />
             </div>
             <div id="main-menu">
                 <a href="index.html">
                     <div class="main-menu-item" id="menu1">
                         <script>document.write(floorplanIcon);</script><br />
+                        
                         1st Floor
                     </div>
                 </a>
