--- a/2ndfloor.html
+++ b/2ndfloor.html
@@ -20,9 +20,10 @@
         <!-- HEADER START -->
         <div id="header">
             <div id="logo">
-                <span style="font-size: 30px">KFloorP</span><br />
-                <span style="font-size: 23px">HASS</span><br />
-                <span style="font-size: 30px" id="clock"></span><br />
+                <span style="font-size: 40px"></span><br />
+                <span style="font-size: 40px">FloorPlan</span><br />
+                <span style="font-size: 40px"></span><br />
+                <span style="font-size: 40px" id="clock"></span><br />
             </div>
             <div id="main-menu">
                 <a href="index.html">
@@ -65,6 +66,7 @@
         </div>
         <!-- HEADER END -->
         <!-- FLOORPLAN START -->
+        <br>
         <div id="floorplan">
             <img src="" class="floorplanImg" id="floorplanImg" alt="floorplanImg" />
         </div>
