Added Driveway light, siren icon and rename upstairs and downstairs

--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
                 <a href="index.html">
                     <div class="main-menu-item" id="menu1">
                         <script>document.write(floorplanIcon);</script><br />
-                        1st Floor
+                        Downstairs
                     </div>
                 </a>
                 <a href="2ndfloor.html">
                     <div class="main-menu-item" id="menu2">
                         <script>document.write(floorplanIcon);</script><br />
-                        2nd Floor
+                        Upstairs
                     </div>
                 </a>
                 <a href="switches.html">
